Various Fix improvements
- Fix conversion between different Fix fractionals
- Add triangle.inc.h as prerequisite to gl.o
- Make fastmath independant of GLFix
- Bump version to 0.8

--- a/Makefile.pc
+++ b/Makefile.pc
@@ -11,6 +11,8 @@ OBJS += $(patsubst %.S, %.o, $(shell find . -name \*.S))
 
 all: $(EXE).elf
 
+gl.o: triangle.inc.h
+
 %.o: %.cpp
 	@echo Compiling $<...
 	@$(GPP) -std=c++11 $(GCCFLAGS) -c $< -o $@
