--- a/Makefile.pc
+++ b/Makefile.pc
@@ -1,8 +1,8 @@
 GCC = gcc
 GPP = g++
 LD = g++
-OPTIMIZE ?= fast
-GCCFLAGS = -g -O$(OPTIMIZE) -I nGL -I . -Wall -W -ffast-math -fno-math-errno -fomit-frame-pointer -fno-lto -fno-rtti -fgcse-sm -fgcse-las -funsafe-loop-optimizations -fno-fat-lto-objects -frename-registers -fprefetch-loop-arrays -Wold-style-cast -ffunction-sections -fdata-sections
+OPTIMIZE ?= g
+GCCFLAGS = -g -O$(OPTIMIZE) -I nGL -I . -Wall -W -ffast-math -fno-math-errno -fno-lto -fno-rtti -fgcse-sm -fgcse-las -funsafe-loop-optimizations -fno-fat-lto-objects -frename-registers -fprefetch-loop-arrays -Wold-style-cast -ffunction-sections -fdata-sections
 LDFLAGS = -lm -lSDL -Wl,--gc-sections
 EXE = nGL
 OBJS = $(patsubst %.c, %.o, $(shell find . -name \*.c))
